# FoundationPose

./: .gitignore  Utils.py  build_all_uv.sh  pyproject.toml  readme.md  setup_uv.sh  stp_to_obj.py
mycpp/: CMakeLists.txt
