[project]
name = "foundationpose"
version = "0.1.0"
description = "FoundationPose: Unified 6D Pose Estimation and Tracking of Novel Objects"
readme = "readme.md"
requires-python = ">=3.9"
dependencies = [
    "torch==2.7.1",
    "torchvision==0.22.1",
    "torchaudio==2.7.1",
    "jupyterlab==4.1.5",
    "ipywidgets==8.1.2",
    "numpy==1.26.4",
    "scipy==1.12.0",
    "scikit-learn==1.4.1.post1",
    "scikit-image==0.22.0",
    "pyyaml==6.0.1",
    "ruamel.yaml==0.18.6",
    "ninja==1.11.1.1",
    "h5py==3.10.0",
    "numba==0.59.1",
    "pybind11==2.12.0",
    "cython>=0.29.37",
    "imageio==2.34.0",
    "opencv-python==4.9.0.80",
    "opencv-contrib-python==4.9.0.80",
    "plotly==5.20.0",
    "open3d==0.18.0",
    "pyglet==1.5.28",
    "pysdf==0.1.9",
    "trimesh==4.2.2",
    "xatlas==0.0.9",
    "rtree==1.2.0",
    "pyrender==0.1.45",
    "pyOpenGL>=3.1.0",
    "pyOpenGL_accelerate>=3.1.0",
    "meshcat==0.3.2",
    "webdataset==0.2.86",
    "omegaconf==2.3.0",
    "pypng==0.20220715.0",
    "Panda3D==1.10.14",
    "kornia",
    "transformations",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch" }]
torchvision = [{ index = "pytorch" }]
torchaudio = [{ index = "pytorch" }]
